kustomize/base/services/bookstore/Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "bookstore-test-connection"
  labels:
    helm.sh/chart: bookstore-0.1.0
    app.kubernetes.io/name: bookstore
    app.kubernetes.io/instance: bookstore
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ["/bin/sh", "-c"]
      args: ['sleep 30', 'wget bookstore:80']
  restartPolicy: Never
