kustomize/base/services/bookstore/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore
  labels:
    helm.sh/chart: bookstore-0.1.0
    app.kubernetes.io/name: bookstore
    app.kubernetes.io/instance: bookstore
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bookstore
    app.kubernetes.io/instance: bookstore
