kustomize/base/services/bookstore/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore
  annotations:
    kubernetes.io/ingress.class: nginx
   # cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: bookstore
    app.kubernetes.io/instance: bookstore
spec:
  rules:
  - host: gharot.cz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookstore
            port:
              number: 80 
status:
  loadBalancer: {}
